[gd_scene load_steps=4 format=3 uid="uid://ylvmyw8mql73"]

[ext_resource type="Script" uid="uid://dkwr06c4iporm" path="res://AKShop.gd" id="1_atmcy"]
[ext_resource type="Texture2D" uid="uid://ctfhvobeitpr4" path="res://AK-removebg-preview.png" id="2_n8m47"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jpu0a"]
radius = 46.8722

[node name="AssaultRifle" type="Node2D"]
script = ExtResource("1_atmcy")

[node name="Gun" type="Sprite2D" parent="."]
z_index = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_n8m47")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_jpu0a")

[node name="CostLabel" type="RichTextLabel" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
